package pers.caijx.builder.improve;

/**
 * @ClassName House
 * @Description: 产品--》Product
 * @Author JunXiangCai
 * @Date 2019/10/19
 * @Version V1.0
 **/
public class House {

    private String basic;

    private String wall;

    private String roofed;

    public String getBasic() {
        return basic;
    }

    public void setBasic(String basic) {
        this.basic = basic;
    }

    public String getWall() {
        return wall;
    }

    public void setWall(String wall) {
        this.wall = wall;
    }

    public String getRoofed() {
        return roofed;
    }

    public void setRoofed(String roofed) {
        this.roofed = roofed;
    }
}
